fix(meta): disable invisibles, use correct cursor color name

--- a/Polis/meta.styl
+++ b/Polis/meta.styl
@@ -56,8 +56,8 @@ meta.document.textfield
 meta.text
     color polis_white
 
-meta.text.invisible
-    color invisible
+//meta.text.invisible
+//    color invisible
 
 meta.text.selected
     background-color lighten(background, 15%)
@@ -65,7 +65,7 @@ meta.text.selected
 /* Cursor */
 meta.cursor
     background-color lighten(background, 5%)
-    border-color accent + accent
+    border-color caret
 
 /* Indentation guides */
 meta.indentguide
